spacing issues - responsive

--- a/theythem.css
+++ b/theythem.css
@@ -1,6 +1,6 @@
- /* div{
+ div{
 	border: 1px solid black;
-} */
+}
 
 body {
 	margin-bottom: 90px;
@@ -13,7 +13,7 @@ h1{
 	font-family: 'Nunito Sans', sans-serif;
 	font-weight: 800;
 	color: grey;
-	font-size: 7em;
+	/* font-size: 7em; */
 
 }
 
@@ -26,7 +26,7 @@ li {
 
 li a{
 	color: grey;
-	font-size: 1.1em;
+	/* font-size: 1.1em; */
 }
 
 a:hover{
@@ -35,7 +35,7 @@ a:hover{
 
 p{
 	font-family: 'Nunito Sans', sans-serif;
-	font-size: 1.3em;
+	/* font-size: 1.3em; */
 	color:grey;
 }
 
@@ -49,7 +49,7 @@ h3, h2{
 }
 
 h2{
-	font-size: 3em;
+	/* font-size: 3em; */
 }
 
 /* PEOPLE */
@@ -71,7 +71,7 @@ h2{
 }
 
 .p1q{
-	font-size: 1.4em;
+	/* font-size: 1.4em; */
 }
 
 
@@ -109,11 +109,11 @@ h2{
 .chat{
 	background-image: url(Jbub.svg);
 	background-repeat: no-repeat;
-	background-size: cover;
+	background-size: contain;
+	height: 100%;
 }
 
 .chat p{
-	padding: 100px;
 }
 
 #twitterimg {
